--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "emsdk"]
 	path = emsdk
 	url = https://github.com/emscripten-core/emsdk
+[submodule "mrubyc"]
+	path = mrubyc
+	url = https://github.com/mrubyc/mrubyc
